move the selectors out of the viewDiv

--- a/index.html
+++ b/index.html
@@ -29,16 +29,15 @@
   </head>
 
   <body class="flat">
-    <div id="viewDiv">
-      <div class="languageSelector">
-        <div class="languageSelectorText">
-        Select Language: <br/><div id="languageSelector"></div>
-        </div>
+    <div id="viewDiv"></div>
+    <div class="languageSelector">
+      <div class="languageSelectorText">
+      Select Language: <br/><div id="languageSelector"></div>
       </div>
-      <div class="countrySelector">
-        <div class="countrySelectorText">
-        Highlight Country: <br/><div id="countrySelector"></div>
-        </div>
+    </div>
+    <div class="countrySelector">
+      <div class="countrySelectorText">
+      Highlight Country: <br/><div id="countrySelector"></div>
       </div>
     </div>
   </body>
